--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-rawbt-api",
+  "name": "@cristianaragao/react-native-rawbt-api",
   "version": "0.0.1",
   "description": "Printing on a thermal printer is simple",
   "main": "rawbtapi.ts",
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/402d/react-native-rawbt-api.git"
+    "url": "git+https://github.com/cristianaragao/react-native-rawbt-api.git"
   },
   "dependencies": {
     "react-native": "0.68.2"
